WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
82516
[chromium] Scheduler should not tell FrameRateController to begin a frame when we dont swap
https://bugs.webkit.org/show_bug.cgi?id=82516
Summary
[chromium] Scheduler should not tell FrameRateController to begin a frame whe...
Nat Duca
Reported
2012-03-28 13:37:29 PDT
[chromium] Scheduler should not tell FrameRateController to begin a frame when we dont swap
Attachments
Patch
(21.39 KB, patch)
2012-03-28 13:38 PDT
,
Nat Duca
no flags
Details
Formatted Diff
Diff
Patch for landing
(21.39 KB, patch)
2012-03-28 14:04 PDT
,
Nat Duca
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Nat Duca
Comment 1
2012-03-28 13:38:08 PDT
Created
attachment 134384
[details]
Patch
Dana Jansens
Comment 2
2012-03-28 13:48:57 PDT
Comment on
attachment 134384
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=134384&action=review
ooh. interesting bug, nice catch.
> Source/WebKit/chromium/tests/CCSchedulerTest.cpp:429 > + // We should not have told the frame rate controller that we begun a frame.
nit: began a frame.
James Robinson
Comment 3
2012-03-28 13:56:19 PDT
Comment on
attachment 134384
[details]
Patch R=me
Nat Duca
Comment 4
2012-03-28 14:04:53 PDT
Created
attachment 134391
[details]
Patch for landing
WebKit Review Bot
Comment 5
2012-03-28 14:45:25 PDT
Comment on
attachment 134391
[details]
Patch for landing Clearing flags on attachment: 134391 Committed
r112446
: <
http://trac.webkit.org/changeset/112446
>
WebKit Review Bot
Comment 6
2012-03-28 14:45:29 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug