Source/WebCore/platform/graphics/chromium/cc/CCThreadProxy.h
@@ -82,8 +82,8 @@ public:
     virtual bool canDraw();
     virtual bool hasMoreResourceUpdates() const;
     virtual void scheduledActionBeginFrame();
-    virtual bool scheduledActionDrawAndSwapIfPossible();
-    virtual void scheduledActionDrawAndSwapForced();
+    virtual CCScheduledActionDrawAndSwapResult scheduledActionDrawAndSwapIfPossible();
+    virtual CCScheduledActionDrawAndSwapResult scheduledActionDrawAndSwapForced();
     virtual void scheduledActionUpdateMoreResources();
     virtual void scheduledActionCommit();
     virtual void scheduledActionBeginContextRecreation();
@@ -127,7 +127,7 @@ private:
     void layerTreeHostClosedOnImplThread(CCCompletionEvent*);
     void setFullRootLayerDamageOnImplThread();
     void recreateContextOnImplThread(CCCompletionEvent*, GraphicsContext3D*, bool* recreateSucceeded, LayerRendererCapabilities*);
-    bool scheduledActionDrawAndSwapInternal(bool forcedDraw);
+    CCScheduledActionDrawAndSwapResult scheduledActionDrawAndSwapInternal(bool forcedDraw);
 
     // Accessed on main thread only.
     bool m_animateRequested;
